Bringing resume generation in line with the style for generating articles. Also removing the final temp file from the Makefile.

--- a/template/resume.html
+++ b/template/resume.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>$title$</title>
+  <title>{title}</title>
   <link rel="stylesheet" type="text/css" href="/style/bootstrap">
   <link rel="stylesheet" type="text/css" href="/style/resume">
 </head>
 <body>
   <header>
-    <h1>$title$</h1>
+    <h1>{title}</h1>
   </header>
-$body$
+    {body}
   <script src="/script/bootstrap"></script>
   <script type="text/javascript">
     {analytics}
