Bringing resume more in line with other markdown pages and adding nav to the top.

--- a/template/resume.html
+++ b/template/resume.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/style/resume">
 </head>
 <body>
+  {nav}
   <header>
     <h1>{title}</h1>
   </header>
