Moving the gressgraph page over to the new style. Restoring copyright footers.

--- a/template/resume.html
+++ b/template/resume.html
@@ -10,7 +10,8 @@
   <header>
     <h1>{title}</h1>
   </header>
-    {body}
+  {body}
+  <!-- {copyright} -->
   <script src="/script/bootstrap"></script>
   <script type="text/javascript">
     {analytics}
