--- a/template/article.html
+++ b/template/article.html
@@ -14,6 +14,11 @@
       <section id="article-comments">
       </section>
     </article>
+    <footer>
+      <div class="container">
+        <p>{copyright}</p>
+      </div>
+    </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/script/bootstrap"></script>
     <script src="/script/comments"></script>
