Adding my GPG key.

--- a/template/front.html
+++ b/template/front.html
@@ -34,6 +34,7 @@
       <ul>
         <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
         <li><a href="resume">résumé</a></li>
+        <li><a href="pgp">PGP key</a></li>
       </ul>
     </section>
     </div>
