--- a/template/nav.html
+++ b/template/nav.html
@@ -29,6 +29,7 @@
           <ul class="dropdown-menu">
             <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
             <li><a href="/resume">Résumé</a></li>
+            <li><a href="/pgp">PGP key</a></li>
           </ul>
         </li>
       </ul>
