--- a/template/article.html
+++ b/template/article.html
@@ -11,7 +11,7 @@
     <article>
       <h1>{title}</h1>
       {body}
-      <section id="article-comments">
+      <section id="comments">
       </section>
     </article>
     <footer>
