--- a/template/front.html
+++ b/template/front.html
@@ -14,6 +14,12 @@
         {articles}
       </ul>
     </section>
+    <section id="stories">
+      <h2>Stories</h2>
+      <ul>
+        {stories}
+      </ul>
+    </section>
     <section id="programs">
       <h2>Programs</h2>
       <ul>
