--- a/template/nav.html
+++ b/template/nav.html
@@ -10,6 +10,12 @@
           </ul>
         </li>
         <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">Stories <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            {stories}
+          </ul>
+        </li>
+        <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown">Programs <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="/gressgraph">gressgraph</a></li>
