--- a/template/story.html
+++ b/template/story.html
@@ -4,7 +4,7 @@
     <title>{title}</title>
     <link rel="stylesheet" type="text/css" href="/style/bootstrap">
     <link rel="stylesheet" type="text/css" href="/style/article">
-    <link href="/articles/feed" type="application/rss+xml" rel="alternate" title="Articles Feed">
+    <link href="/stories/feed" type="application/rss+xml" rel="alternate" title="Stories Feed">
   </head>
   <body>
     {nav}
