Switching to BSD. Added a quick-and-dirty Code Deconstructed embed.

--- a/template/front.html
+++ b/template/front.html
@@ -42,7 +42,10 @@
         <li><a href="pgp">PGP key</a></li>
       </ul>
     </section>
-    </div>
+    <section id="video">
+      <h2>Episode 8 of "Code Deconstructed"</h2>
+      <iframe width="560" height="315" src="http://www.youtube.com/embed/PnMxT3cjYt8" frameborder="0" allowfullscreen></iframe>
+    </section>
     <script type="text/javascript">
       {analytics}
     </script>
