Adding Code Deconstructed playlist embed and twitter link.

--- a/template/front.html
+++ b/template/front.html
@@ -38,13 +38,14 @@
       <h2>About</h2>
       <ul>
         <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
+        <li><a href="http://twitter.com/jekor">@jekor</a></li>
         <li><a href="resume">résumé</a></li>
         <li><a href="pgp">PGP key</a></li>
       </ul>
     </section>
     <section id="video">
-      <h2>Episode 8 of "Code Deconstructed"</h2>
-      <iframe width="560" height="315" src="http://www.youtube.com/embed/PnMxT3cjYt8" frameborder="0" allowfullscreen></iframe>
+      <h2>Code Deconstructed Videos</h2>
+      <iframe width="560" height="315" src="http://www.youtube.com/embed/videoseries?list=PLxj9UAX4Em-IBXkvcC3MycLlcxyoi7v8B" frameborder="0" allowfullscreen></iframe>
     </section>
     <script type="text/javascript">
       {analytics}
