Adding links to templatepg and stackoverflow.

--- a/template/front.html
+++ b/template/front.html
@@ -26,6 +26,7 @@
         <li><a href="gressgraph">gressgraph</a></li>
         <li><a href="xtee">xtee</a></li>
         <li><a href="log2rotate">log<sub>2</sub>rotate</a></li>
+        <li><a href="http://hackage.haskell.org/package/templatepg">templatepg</a></li>
       </ul>
     </section>
     <section id="sites">
@@ -39,6 +40,7 @@
       <ul>
         <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
         <li><a href="http://twitter.com/jekor">@jekor</a></li>
+        <li><a href="http://stackoverflow.com/users/586090/jekor">stackoverflow</a></li>
         <li><a href="pgp">PGP key</a></li>
       </ul>
     </section>
