--- a/template/nav.html
+++ b/template/nav.html
@@ -21,6 +21,7 @@
             <li><a href="/gressgraph">gressgraph</a></li>
             <li><a href="/xtee">xtee</a></li>
             <li><a href="/log2rotate">log<sub>2</sub>rotate</a></li>
+            <li><a href="http://hackage.haskell.org/package/templatepg">templatepg</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -33,6 +34,8 @@
           <a href="" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
+            <li><a href="http://twitter.com/jekor">@jekor</a></li>
+            <li><a href="http://stackoverflow.com/users/586090/jekor">stackoverflow</a></li>
             <li><a href="/pgp">PGP key</a></li>
           </ul>
         </li>
