Adding link to GitHub profile.

--- a/template/nav.html
+++ b/template/nav.html
@@ -35,7 +35,8 @@
           <ul class="dropdown-menu">
             <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
             <li><a href="http://twitter.com/jekor">@jekor</a></li>
-            <li><a href="http://stackoverflow.com/users/586090/jekor">stackoverflow</a></li>
+            <li><a href="https://github.com/jekor">GitHub</a></li>
+            <li><a href="http://stackoverflow.com/users/586090/jekor">Stack Overflow</a></li>
             <li><a href="/pgp">PGP key</a></li>
           </ul>
         </li>
