--- a/template/front.html
+++ b/template/front.html
@@ -40,6 +40,7 @@
       <ul>
         <li><a href="mailto:jekor@jekor.com">jekor@jekor.com</a></li>
         <li><a href="http://twitter.com/jekor">@jekor</a></li>
+        <li><a href="https://github.com/jekor">GitHub</a></li>
         <li><a href="http://stackoverflow.com/users/586090/jekor">stackoverflow</a></li>
         <li><a href="pgp">PGP key</a></li>
       </ul>
