--- a/template/front.html
+++ b/template/front.html
@@ -46,8 +46,8 @@
       </ul>
     </section>
     <section id="video">
-      <h2>Code Deconstructed Videos</h2>
-      <iframe width="560" height="315" src="http://www.youtube.com/embed/videoseries?list=PLxj9UAX4Em-IBXkvcC3MycLlcxyoi7v8B" frameborder="0" allowfullscreen></iframe>
+      <h2>Emacs Tutorial Videos</h2>
+      <iframe width="560" height="315" src="http://www.youtube.com/embed/videoseries?list=PLxj9UAX4Em-IiOfvF2Qs742LxEK4owSkr" frameborder="0" allowfullscreen></iframe>
     </section>
   </body>
 </html>
