--- a/template/page.html
+++ b/template/page.html
@@ -16,7 +16,7 @@
         <p>{copyright}</p>
       </div>
     </footer>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/script/jquery"></script>
     <script src="/script/bootstrap"></script>
   </body>
 </html>
