--- a/template/article.html
+++ b/template/article.html
@@ -10,6 +10,7 @@
     {nav}
     <article>
       <h1>{title}</h1>
+      <h3>{date}</h3>
       {body}
       <section id="reader-comments">
       </section>
