--- a/template/front.html
+++ b/template/front.html
@@ -43,6 +43,7 @@
         <li><a href="https://github.com/jekor">GitHub</a></li>
         <li><a href="http://stackoverflow.com/users/586090/jekor">stackoverflow</a></li>
         <li><a href="pgp">PGP key</a></li>
+        <li><a href="ssh">SSH key</a></li>
       </ul>
     </section>
     <section id="video">
