--- a/template/nav.html
+++ b/template/nav.html
@@ -38,6 +38,7 @@
             <li><a href="https://github.com/jekor">GitHub</a></li>
             <li><a href="http://stackoverflow.com/users/586090/jekor">Stack Overflow</a></li>
             <li><a href="/pgp">PGP key</a></li>
+            <li><a href="/ssh">SSH key</a></li>
           </ul>
         </li>
       </ul>
